--- a/_posts/2019-06-23-2019-first_post.md
+++ b/_posts/2019-06-23-2019-first_post.md
@@ -6,6 +6,7 @@ tags: [test, first]
 header:
 	images: "/images/galaxy.jpg"
 excerpt : "My First Post"
+link : '2019-06-23-2019-first_post.md'
 ---
 
 # H1 Heading
