--- a/_posts/2019-06-23-2019-first_post.md
+++ b/_posts/2019-06-23-2019-first_post.md
@@ -26,6 +26,5 @@ Here is a list:
 * item 1
 * item 2
 
-
-{{ site.baseurl }}{% post_url 2019-06-23-2019-first_post %}
+[Link text]({% post_url 2019-06-23-2019-first_post %})
 
