--- a/_posts/2019-06-23-2019-first_post.md
+++ b/_posts/2019-06-23-2019-first_post.md
@@ -26,5 +26,11 @@ Here is a list:
 * item 1
 * item 2
 
-[Link text]({% post_url 2019-06-23-2019-first_post %})
+[Link to this page]({% post_url 2019-06-23-2019-first_post %})
+
+{% for post in site.posts %}
+ * {{ post.url }}
+   
+{% endfor %}
+
 
