--- a/_posts/2019-06-23-2019-first_post.md
+++ b/_posts/2019-06-23-2019-first_post.md
@@ -29,8 +29,7 @@ Here is a list:
 [Link to this page]({% post_url 2019-06-23-2019-first_post %})
 
 {% for post in site.posts %}
- * {{ post.url }}
-   
+* {{ post.url | remove:'foo' }}
 {% endfor %}
 
 
