--- a/_posts/2019-06-23-2019-first_post.md
+++ b/_posts/2019-06-23-2019-first_post.md
@@ -30,7 +30,7 @@ Here is a list:
 
 {% for post in site.posts %}
 * {{ post.url | remove:'/' }}
-* {{ site.url }}{{ post.url }}
+* [Link to post]({{ site.url }}{{ post.url }})
 
 {% endfor %}
 
