--- a/_posts/2019-06-23-2019-first_post.md
+++ b/_posts/2019-06-23-2019-first_post.md
@@ -31,7 +31,7 @@ Here is a list:
 {% for post in site.posts %}
 * {{ post.url | remove:'/' }}
 * [Link to post]({{ site.url }}{{ post.url }})
-
+post.title
 {% endfor %}
 
 
