--- a/_posts/2019-06-23-2019-first_post.md
+++ b/_posts/2019-06-23-2019-first_post.md
@@ -1,6 +1,7 @@
 ---
 layout: posts
 title: "First Post"
+number: 1
 date: 06-23-2019
 tags: [test, first]
 header:
@@ -29,25 +30,13 @@ Here is a list:
 [Link to this page]({% post_url 2019-06-23-2019-first_post %})
 
 {% for post in site.posts %}
-* {{ post.url | remove:'/' }}
+* {{ post.title }}
+* {{ post.number }}
 * [Link to post]({{ site.url }}{{ post.url }})
 {{post.title}}
 {% endfor %}
 
 
 
-{% for post in site.posts %}
-  <article class="{% if forloop.first %}first{% elsif forloop.last %}last{% else %}middle{% endif %}">
-		<div class="article-head">
-			<h2 class="title"><a href="/{{ post.url }}/" class="js-pjax">{{ post.title }}</a></h2>
-			<p class="date">{{ post.date | date: "%b %d, %Y" }}</p>
-		</div><!--/.article-head-->
-		<div class="article-content">
-		{{ post.long_description }}
-		<a href="/{{ post.url }}/" class="full-post-link js-pjax">Read more</a>	
-		</div><!--/.article-content-->
-	</article>
-	{% if forloop.last %}{% else %}<div class="separater"></div>{% endif %}
-{% endfor %}
 
 
